<resources>
    <string name="app_name" translatable="false">HTH Play</string>

    //MAIN
    <string name="message_request_permission_read_phone_state">We need permission to continue</string>
    <string name="tilte_dialog_check_network">No network connection</string>
    <string name="OK">OK</string>
    <string name="message_dialog">Turn on network connection</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="back">Press back twice to exit the application!</string>
    //bottom menu
    <string name="title_home">Home</string>
    <string name="title_film">Category</string>
    <string name="title_TV">TV</string>
    <string name="title_my_media">My media</string>
    <string name="title_more">More</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Home
    <string name="proposed">Proposed</string>
    <string name="synthetic">Synthetic</string>
    <string name="All">All</string>
    <string name="hotVideo">Hot Video</string>

    // bottom video
    <string name="follow">Favorite</string>
    <string name="unfollow">Unfavorite</string>
    <string name="comment">Comments</string>
    <string name="hidecomment">Hide comments</string>
    <string name="relatedContent">Related Content</string>
    <string name="isPlaying">IS PLAYING</string>
    // comment film
    <string name="etHint">Comment</string>

    // film fragment
    <string name="TV_serie">Music</string>
    <string name="movie">Movie</string>
    <string name="anime">Anime</string>
    <string name="sport">Sport</string>

    <string name="iTemToolbarTitleSearch">Search</string>

    // PlayVideoActivity
    <string name="checkNetworkPlayVideo">No network connection, please check again</string>
    // Search view
    <string name="seachhint">Search Video</string>
    <string name="noMatchFound">No Match found</string>
    <string name="searchHistory">Search history</string>
    <string name="searchResults">Search Results</string>


    // login
    <string name="titleLogin">We always want to bring you a great experience</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="username_empty">Username can\'t be emtpy</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="incorrectPassword">Incorrect password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgotPassword">"Forgot password?"</string>
    <string name="usernameAvailable">Username available</string>
    <string name="usernameNotExist">Username does not exist</string>
    <string name="hasSpaces">Password cannot contain spaces</string>
    <string name="hasUpper">Password must contain at least 1 uppercase letter</string>
    <string name="hasLower">Password must contain at least 1 lowercase letter</string>
    <string name="hasNumber">Password must contain at least 1 number</string>
    <string name="hasSymbol">Password must contain at least 1 symbol</string>
    <string name="registerSuccess">Register success</string>
    <string name="loginSuccess">Login success</string>
    <string name="wellcome"></string>
    <string name="featureDevelopment">Features are under development</string>

    //More fragment
    <string name="hello">Hello !</string>
    <string name="listFavorie">List of your favorite videos</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="confirmLogout">Are you sure you want to log out?</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="vietnam">Vietnamese</string>
</resources>