<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/fullScreen"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--        <com.google.android.material.appbar.AppBarLayout-->
            <!--            android:id="@+id/appbar"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content">-->
            <!--            <androidx.appcompat.widget.Toolbar-->
            <!--                android:id="@+id/toolbar"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content">-->
            <!--            </androidx.appcompat.widget.Toolbar>-->
            <!--        </com.google.android.material.appbar.AppBarLayout>-->
            <FrameLayout
                android:background="@color/colorBackground"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:background="@color/colorBackgountBottomMenu"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp">
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/llHome"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/imHome"
                        android:src="@drawable/ic_round_home_24"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"/>
                    <TextView
                        android:id="@+id/tvHome"
                        style="@style/styleTextMenuBottom"

                        android:text="@string/title_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/llFilm"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp">

                    <ImageView
                        android:id="@+id/imFilm"
                        android:src="@drawable/ic_round_local_movies_24"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"/>
                    <TextView
                        style="@style/styleTextMenuBottom"
                        android:id="@+id/tvFilm"
                        android:text="@string/title_film"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/llTV"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp">
                    <ImageView
                        android:id="@+id/imTV"
                        android:src="@drawable/ic_round_tv_24"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"/>
                    <TextView
                        style="@style/styleTextMenuBottom"

                        android:id="@+id/tvTV"
                        android:text="@string/title_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/llMyMedia"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp">

                    <ImageView
                        android:id="@+id/imMyMedia"
                        android:src="@drawable/ic_round_video_library_24"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"/>
                    <TextView
                        android:id="@+id/tvMyMedia"
                        style="@style/styleTextMenuBottom"
                        android:text="@string/title_my_media"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/llMore"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp">

                    <ImageView
                        android:id="@+id/imMore"
                        android:src="@drawable/ic_round_more_horiz_24"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"/>
                    <TextView
                        style="@style/styleTextMenuBottom"

                        android:id="@+id/tvMore"
                        android:text="@string/title_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>