<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:background="@drawable/bgplayvideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/prBar"
                android:layout_marginTop="@dimen/_450sdp"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_slider"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/imageSilde"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_140sdp"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:id="@+id/llHotvideo"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvHotVideo"
                        android:paddingBottom="@dimen/_6sdp"
                        android:gravity="top"
                        android:layout_marginLeft="@dimen/_7sdp"
                        style="@style/FontTextHomeTitle"
                        android:text="@string/hotVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:nestedScrollingEnabled="false"
                        android:id="@+id/rvHotvideo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/rl_ads"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:background="@drawable/background_ads"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp">
                    <ImageView
                        android:id="@+id/imClose"
                        android:layout_margin="@dimen/_4sdp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_round_close_24"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"/>
                    <com.romainpiel.shimmer.ShimmerTextView
                        android:id="@+id/tvAds"
                        android:layout_margin="@dimen/_7sdp"
                        android:textStyle="bold|italic"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBackground"
                        android:textSize="@dimen/_13sdp"
                        app:reflectionColor="@color/colorBackgroundMain"/>

                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/llProposed"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvListProposed"
                        android:layout_marginLeft="@dimen/_7sdp"
                        style="@style/FontTextHomeTitle"
                        android:text="@string/proposed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:nestedScrollingEnabled="false"
                        android:id="@+id/rvProposed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llSynthetic"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvListSynthetic"
                        android:layout_marginLeft="@dimen/_7sdp"
                        style="@style/FontTextHomeTitle"
                        android:text="@string/synthetic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:nestedScrollingEnabled="false"
                        android:id="@+id/rvSynthetic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>